--- a/compose.yml
+++ b/compose.yml
@@ -332,12 +332,12 @@ services:
       context: ./php82
       args:
         - EXT_GD=true
-        - EXT_REDIS=true
-        - EXT_GRPC=true
-        - EXT_PROTOBUF=true
-        - EXT_MEMCACHED=true
-        - EXT_SWOOLED=true
-        - EXT_KAFKA=true
+        - EXT_REDIS=false
+        - EXT_GRPC=false
+        - EXT_PROTOBUF=false
+        - EXT_MEMCACHED=false
+        - EXT_SWOOLED=false
+        - EXT_KAFKA=false
     container_name: php82
     privileged: true
     restart: always
